--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,5 +1,5 @@
-appTitle=Component Based Navigation Demo
-appDescription=Component Based Navigation Demo
+appTitle=Nested Component Navigation Demo
+appDescription=Nested Component Navigation Demo
 
 homePageTitle=Home Page
 view1Title=Home Page View1 Title
